--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.4",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "react": "^18.2.0",
-    "react-dayjs": "^0.3.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
