--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -21,10 +22,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://188.225.86.213:8000/",
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
