--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "http-proxy-middleware": "^2.0.6",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
