--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.5",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
