--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "predeploy": "npm run build",
